--- a/dialogs/rematchdialog.kv
+++ b/dialogs/rematchdialog.kv
@@ -6,8 +6,8 @@
         orientation: "vertical"
         padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
-        border_radius: 20
-        radius: [15]
+        border_radius: "20dp"
+        radius: ["15dp"]
 
         MDLabel:
             text: "Play again?"
