Loads of changes to implement actions.

--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -29,17 +29,17 @@
             spacing: "8dp"
             padding: "8dp"
             orientation: "vertical"
-            canvas.before:
-                Color:
-                    rgba: C('#296f2c')
-                Line:
-                    width: 2.5
-                    rectangle: self.x, self.y, self.width, self.height
-                Color:
-                    rgba: C('#236027')
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
+#            canvas.before:
+#                Color:
+#                    rgba: C('#296f2c')
+#                Line:
+#                    width: 2.5
+#                    rectangle: self.x, self.y, self.width, self.height
+#                Color:
+#                    rgba: C('#236027')
+#                Rectangle:
+#                    pos: self.pos
+#                    size: self.size
 
             MDLabel:
                 font_style: "Subtitle2"
