--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -62,14 +62,14 @@
                 MDFillRoundFlatIconButton:
                     icon: "circle-outline"
                     id: but1
-                    font_style: "Button" #800
-                    md_bg_color: C('#c62828')
+                    font_style: "Button"
+                    md_bg_color: C(app.globals.colordefs["Red"])
                     text: "Red"
                     on_release:
                         root.ColorSelect(but1)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#ad1457')
+                    md_bg_color: C(app.globals.colordefs["Pink"])
                     icon: "circle-outline"
                     id: but2
                     font_style: "Button"
@@ -78,7 +78,7 @@
                         root.ColorSelect(but2)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#6a1b9a')
+                    md_bg_color: C(app.globals.colordefs["Purple"])
                     icon: "circle-outline"
                     id: but3
                     font_style: "Button"
@@ -87,7 +87,7 @@
                         root.ColorSelect(but3)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#1565c0')
+                    md_bg_color: C(app.globals.colordefs["Blue"])
                     icon: "circle-outline"
                     id: but4
                     font_style: "Button"
@@ -96,7 +96,7 @@
                         root.ColorSelect(but4)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#2e7d32')
+                    md_bg_color: C(app.globals.colordefs["Green"])
                     icon: "circle-outline"
                     id: but5
                     font_style: "Button"
@@ -105,7 +105,7 @@
                         root.ColorSelect(but5)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#f9a825')
+                    md_bg_color: C(app.globals.colordefs["Yellow"])
                     icon: "circle-outline"
                     id: but6
                     font_style: "Button"
@@ -114,7 +114,7 @@
                         root.ColorSelect(but6)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#ef6c00')
+                    md_bg_color: C(app.globals.colordefs["Orange"])
                     icon: "circle-outline"
                     id: but7
                     font_style: "Button"
@@ -123,7 +123,7 @@
                         root.ColorSelect(but7)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#4e342e')
+                    md_bg_color: C(app.globals.colordefs["Brown"])
                     icon: "circle-outline"
                     id: but8
                     font_style: "Button"
@@ -132,7 +132,7 @@
                         root.ColorSelect(but8)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C('#424242')
+                    md_bg_color: C(app.globals.colordefs["Grey"])
                     icon: "circle-outline"
                     id: but9
                     font_style: "Button"
