--- a/codenet.kv
+++ b/codenet.kv
@@ -41,6 +41,7 @@ WindowManager:
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
         MDStackLayout:
+            size_hint_y: 1/2
             spacing: "8dp"
             padding: "8dp"
 
@@ -55,71 +56,59 @@ WindowManager:
             MDSeparator:
                 color: C("FFFFFF")
 
-            MDBoxLayout:
-                orientation: "horizontal"
-                adaptive_height: True
+            MDStackLayout:
+                spacing: "52dp"
 
-                MDLabel:
-                    id: alignmentidentifer
-                    text_color: C('FFFFFF')
-                    theme_text_color: "Custom"
-                    markup: True
-                    halign: "left"
+                MDBoxLayout:
+                    orientation: "horizontal"
                     adaptive_height: True
-#                    text_size: self.size
-#                    valign: "top"
 
-                MDLabel:
-                    text_color: app.theme_cls.primary_color
-                    theme_text_color: "Custom"
-                    id: currentround
-                    text: f"[size=30sp][font=Icons]{md_icons['circle-outline']}{md_icons['circle-outline']}{md_icons['circle-outline']}[/font][/size]"
-                    markup: True
-                    halign: "center"
-                    valign: "top"
-                    text_size: self.size
+                    MDLabel:
+                        id: alignmentidentifer
+                        text_color: C('FFFFFF')
+                        theme_text_color: "Custom"
+                        markup: True
+                        halign: "left"
+                        adaptive_height: True
 
-                MDLabel:
-                    id: playeridentifer
-                    halign: "right"
-                    text_color: C('FFFFFF')
-                    theme_text_color: "Custom"
-                    markup: True
+                    MDLabel:
+                        text_color: app.theme_cls.primary_color
+                        theme_text_color: "Custom"
+                        id: currentround
+                        text: f"[size=30sp][font=Icons]{md_icons['circle-outline']}{md_icons['circle-outline']}{md_icons['circle-outline']}[/font][/size]"
+                        markup: True
+                        halign: "center"
+
+                    MDLabel:
+                        id: playeridentifer
+                        halign: "right"
+                        text_color: C('FFFFFF')
+                        theme_text_color: "Custom"
+                        markup: True
+                        adaptive_height: True
+
+                MDBoxLayout:
+                    orientation: "vertical"
+                    spacing: "8dp"
                     adaptive_height: True
-#                    text_size: self.size
-#                    valign: "top"
 
-            MDBoxLayout:
-                orientation: "vertical"
-                spacing: "8dp"
-                adaptive_height: True
+                    MDLabel:
+                        adaptive_height: True
+                        text_color: C('FFFFFF')
+                        theme_text_color: "Custom"
+                        font_style: 'Subtitle1'
+                        halign: "center"
+                        markup: True
+                        text: f"[size=22sp][font=Icons]{md_icons['timer']}[/font][/size]"
 
-                MDLabel:
-                    adaptive_height: True
-                    text_color: C('FFFFFF')
-                    theme_text_color: "Custom"
-                    font_style: 'Subtitle1'
-                    halign: "center"
-                    markup: True
-                    text: f"[size=22sp][font=Icons]{md_icons['timer']}[/font][/size]"
-
-                MDFloatingLabel:
-                    adaptive_height: True
-                    id: timer
-                    text: "[font=H4][size=40sp]00:00[/size][/font]"
-                    theme_text_color: "Custom"
-                    markup: True
-                    text_color: C('#FFFFFF')
-                    pos_hint: {"center_x": 0.5}
-
-#            MDFillRoundFlatIconButton:
-#                icon: 'file-code'
-#                text: "Actions"
-#                adaptive_size: True
-#                pos_hint: {"center_x": 0.5, "center_y": 0.5}
-#                theme_text_color: "Custom"
-#                font_style: 'Button'
-#                disabled: True
+                    MDFloatingLabel:
+                        adaptive_height: True
+                        id: timer
+                        text: "[font=H4][size=40sp]00:00[/size][/font]"
+                        theme_text_color: "Custom"
+                        markup: True
+                        text_color: C('#FFFFFF')
+                        pos_hint: {"center_x": 0.5}
 
         MDBoxLayout:
             orientation: "vertical"
@@ -143,6 +132,14 @@ WindowManager:
                         spacing: "8dp"
 
                         MDBoxLayout:
+
+                        MDFloatingLabel:
+                            adaptive_height: True
+                            text: "[font=H4][size=20sp]Main Log[/size][/font]"
+                            theme_text_color: "Custom"
+                            markup: True
+                            text_color: C('#FFFFFF')
+                            pos_hint: {"center_x": 0.5}
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -175,18 +172,6 @@ WindowManager:
                                 halign: "center"
                                 markup: True
                                 text: "At least one hacker is among the following."
-                                id: round1sum
-
-                        MDFillRoundFlatIconButton:
-                            id: round1reveal
-                            text: "Upload Log"
-                            icon: 'cloud-upload'
-                            font_style: "Button"
-                            md_bg_color: app.theme_cls.primary_color
-                            pos_hint: {"center_x": .5, "center_y": .5}
-                            disabled: True
-                            on_press:
-                                root.r1l1()
 
                         MDBoxLayout:
 
@@ -199,6 +184,14 @@ WindowManager:
                         orientation: "vertical"
                         padding: "8dp"
                         spacing: "8dp"
+
+                        MDFloatingLabel:
+                            adaptive_height: True
+                            text: "[font=H4][size=20sp]First Log[/size][/font]"
+                            theme_text_color: "Custom"
+                            markup: True
+                            text_color: C('#FFFFFF')
+                            pos_hint: {"center_x": 0.5}
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -233,16 +226,13 @@ WindowManager:
                                 markup: True
                                 text: "At least one hacker is among the following."
 
-                        MDFillRoundFlatIconButton:
-                            id: round2reveal1
-                            text: "Upload Log"
-                            icon: 'cloud-upload'
-                            font_style: "Button"
-                            md_bg_color: app.theme_cls.primary_color
-                            pos_hint: {"center_x": .5, "center_y": .5}
-                            disabled: True
-                            on_press:
-                                root.r2l1()
+                        MDFloatingLabel:
+                            adaptive_height: True
+                            text: "[font=H4][size=20sp]Second Log[/size][/font]"
+                            theme_text_color: "Custom"
+                            markup: True
+                            text_color: C('#FFFFFF')
+                            pos_hint: {"center_x": 0.5}
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -277,16 +267,46 @@ WindowManager:
                                 markup: True
                                 text: "At least one hacker is among the following."
 
-                        MDFillRoundFlatIconButton:
-                            id: round2reveal2
-                            text: "Upload Log"
-                            icon: 'cloud-upload'
-                            font_style: "Button"
-                            md_bg_color: app.theme_cls.primary_color
-                            pos_hint: {"center_x": .5, "center_y": .5}
-                            disabled: True
-                            on_press:
-                                root.r2l2()
+                        MDFloatingLabel:
+                            adaptive_height: True
+                            text: "[font=H4][size=20sp]Third Log[/size][/font]"
+                            theme_text_color: "Custom"
+                            markup: True
+                            text_color: C('#FFFFFF')
+                            pos_hint: {"center_x": 0.5}
+
+                        MDBoxLayout:
+                            pos_hint: {"center_x":0.5, "y": 0}
+                            orientation: "vertical"
+                            canvas.before:
+                                Color:
+                                    rgba: 51/255, 255/255, 51/255, 0.3
+                                Line:
+                                    width: 0.3
+                                    rectangle: self.x, self.y, self.width, self.height
+                                Color:
+                                    rgba: 51/255, 255/255, 51/255, 0.06
+                                Rectangle:
+                                    pos: self.pos
+                                    size: self.size
+
+                            MDLabel:
+                                id: round2sub3
+                                markup: True
+                                text_color: app.theme_cls.primary_color
+                                theme_text_color: "Custom"
+                                font_style: 'Subtitle2'
+                                halign: "center"
+                                text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+
+                            MDLabel:
+                                id: round2sum3
+                                text_color: app.theme_cls.primary_color
+                                theme_text_color: "Custom"
+                                font_style: 'Subtitle2'
+                                halign: "center"
+                                markup: True
+                                text: "At least one hacker is among the following."
 
                 Tab:
                     title: f"[size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size][size=15sp][font=Button] ROUND 3[/font][/size]"
@@ -296,6 +316,15 @@ WindowManager:
                         orientation: "vertical"
                         padding: "8dp"
                         spacing: "8dp"
+
+                        MDFloatingLabel:
+                            id:playerlog1
+                            adaptive_height: True
+                            text: "[font=H4][size=20sp]Player Log[/size][/font]"
+                            theme_text_color: "Custom"
+                            markup: True
+                            text_color: C('#FFFFFF')
+                            pos_hint: {"center_x": 0.5}
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -314,7 +343,7 @@ WindowManager:
 
                             MDLabel:
                                 id: round3sum1
-                                text_color: C('1565c0')
+                                text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
@@ -335,10 +364,19 @@ WindowManager:
                             icon: 'cloud'
                             font_style: "Button"
                             md_bg_color: app.theme_cls.primary_color
-                            text: "Open Cloud"
+                            text: "Open Log"
                             disabled: True
                             on_press:
                                 root.r3l1()
+
+                        MDFloatingLabel:
+                            id:playerlog2
+                            adaptive_height: True
+                            text: "[font=H4][size=20sp]Player Log[/size][/font]"
+                            theme_text_color: "Custom"
+                            markup: True
+                            text_color: C('#FFFFFF')
+                            pos_hint: {"center_x": 0.5}
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -357,7 +395,7 @@ WindowManager:
 
                             MDLabel:
                                 id: round3sum2
-                                text_color: C('1565c0')
+                                text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
@@ -377,7 +415,7 @@ WindowManager:
                             font_style: "Button"
                             md_bg_color: app.theme_cls.primary_color
                             pos_hint: {"center_x":0.5, "center_y":0.5}
-                            text: "Open Cloud"
+                            text: "Open Log"
                             disabled: True
                             on_press:
                                 root.r3l2()
