Scoring system has been complete.

--- a/gui/informationscreens/PointsScreen.kv
+++ b/gui/informationscreens/PointsScreen.kv
@@ -51,16 +51,8 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for all hackers, for each coder that determined a hacker innocent."
+                    text: f"[color=#FFFFFF]+[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for all hackers, for each coder that determined a hacker incorrectly as a coder."
                     markup: True
-
-#                MDLabel:
-#                    adaptive_height: True
-#                    text_color: app.theme_cls.primary_color
-#                    theme_text_color: "Custom"
-#                    font_style: 'Body2'
-#                    text: f"[color=#FFFFFF]-[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the hacker, for each hacker they have determined guilty."
-#                    markup: True
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -72,20 +64,12 @@
                     font_style: 'H6'
                     text: "Coder Scoring"
 
-#                MDLabel:
-#                    adaptive_height: True
-#                    text_color: app.theme_cls.primary_color
-#                    theme_text_color: "Custom"
-#                    font_style: 'Body2'
-#                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all coders, if majority of coders have determined a hacker as guilty."
-#                    markup: True
-
                 MDLabel:
                     adaptive_height: True
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the coder, for each hacker they have determined guilty."
+                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the coder, for each hacker they have determined correctly as a hacker."
                     markup: True
 
                 MDLabel:
@@ -93,13 +77,5 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for every even amount of coders they have determined innocent."
+                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for every even amount of coders they have determined correctly as a coder."
                     markup: True
-
-#                MDLabel:
-#                    adaptive_height: True
-#                    text_color: app.theme_cls.primary_color
-#                    theme_text_color: "Custom"
-#                    font_style: 'Body2'
-#                    text: f"[color=#FFFFFF]-[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for each coder that they have determined guilty and were part of the majority."
-#                    markup: True
