--- a/gui/informationscreens/PointsScreen.kv
+++ b/gui/informationscreens/PointsScreen.kv
@@ -33,7 +33,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "Points are provided via the use of determination cards. After the game is over and you reach the results screen, the host will provide points depending on the scoring of their alignment. These points are accumulated and are intended to be used throughout multiple matches. The amount of matches and the points needed to win, should be set by the group before the game begins."
+                    text: "After the game is over and you reach the results screen, the host will provide points depending on the scoring of their alignment. These points are accumulated and are intended to be used throughout multiple matches. The amount of matches and the points needed to win, should be set by the group before the game begins."
                     markup: True
 
                 MDSeparator:
@@ -51,7 +51,23 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for all hackers, for each coder that determined a hacker incorrectly as a coder."
+                    text: f"[color=#FFFFFF]+[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all hackers, if the majority determined the hacker's target, as a hacker."
+                    markup: True
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: app.theme_cls.primary_color
+                    theme_text_color: "Custom"
+                    font_style: 'Body2'
+                    text: f"[color=#FFFFFF]+[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for all hackers, for each coder that determined a hacker incorrectly, as a coder."
+                    markup: True
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: app.theme_cls.primary_color
+                    theme_text_color: "Custom"
+                    font_style: 'Body2'
+                    text: f"[color=#FFFFFF]-[/color][color=#c62828][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the hacker, for each hacker they have determined correctly as a hacker and were not part of the majority."
                     markup: True
 
                 MDSeparator:
@@ -69,7 +85,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for the coder, for each hacker they have determined correctly as a hacker."
+                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all coders, if the majority determined the hacker's target, as a coder."
                     markup: True
 
                 MDLabel:
@@ -77,5 +93,13 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for every even amount of coders they have determined correctly as a coder."
+                    text: f"[color=#FFFFFF]+[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for all coders, for each hacker they have determined correctly, as a hacker."
+                    markup: True
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: app.theme_cls.primary_color
+                    theme_text_color: "Custom"
+                    font_style: 'Body2'
+                    text: f"[color=#FFFFFF]-[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for the coder, for each coder that they have determined as a hacker and were part of the majority."
                     markup: True
