Massive changes to implement actions.

--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -27,7 +27,7 @@
             ActionsScreen:
             TimerScreen:
             LogsScreen:
-            PointsScreen
+            PointsScreen:
 
         MDNavigationDrawer:
             size_hint: 0.6, 1
