--- a/codenet.kv
+++ b/codenet.kv
@@ -11,6 +11,8 @@
 #:include gui/endgame.kv
 #:import C kivy.utils.get_color_from_hex
 #:import SlideTransition kivy.uix.screenmanager.SlideTransition
+#:include gui/mainscreens/Timer.kv
+#:include gui/mainscreens/Action.kv
 
 WindowManager:
     transition: SlideTransition()
@@ -40,7 +42,7 @@ WindowManager:
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
         MDStackLayout:
-            size_hint_y: 1/2
+            size_hint_y: 1/6
             spacing: "8dp"
             padding: "8dp"
 
@@ -55,48 +57,43 @@ WindowManager:
             MDSeparator:
                 color: C("FFFFFF")
 
-            MDStackLayout:
-                spacing: "60dp"
+            MDBoxLayout:
+                orientation: "horizontal"
+                adaptive_height: True
 
-                MDBoxLayout:
-                    orientation: "horizontal"
+                MDLabel:
+                    id: alignmentidentifer
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    markup: True
+                    halign: "left"
                     adaptive_height: True
 
-                    MDLabel:
-                        id: alignmentidentifer
-                        text_color: C('FFFFFF')
-                        theme_text_color: "Custom"
-                        markup: True
-                        halign: "left"
-                        adaptive_height: True
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    theme_text_color: "Custom"
+                    id: currentround
+                    text: f"[size=30sp][font=Icons]{md_icons['circle-outline']}{md_icons['circle-outline']}{md_icons['circle-outline']}[/font][/size]"
+                    markup: True
+                    halign: "center"
 
-                    MDLabel:
-                        text_color: app.theme_cls.primary_color
-                        theme_text_color: "Custom"
-                        id: currentround
-                        text: f"[size=30sp][font=Icons]{md_icons['circle-outline']}{md_icons['circle-outline']}{md_icons['circle-outline']}[/font][/size]"
-                        markup: True
-                        halign: "center"
-
-                    MDLabel:
-                        id: playeridentifer
-                        halign: "right"
-                        text_color: C('FFFFFF')
-                        theme_text_color: "Custom"
-                        markup: True
-                        adaptive_height: True
-
-                MDBoxLayout:
-                    orientation: "vertical"
+                MDLabel:
+                    id: playeridentifer
+                    halign: "right"
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    markup: True
                     adaptive_height: True
 
-                    MDFloatingLabel:
-                        id: timer
-                        text: "[font=H4][size=40sp]00:00[/size][/font]"
-                        theme_text_color: "Custom"
-                        markup: True
-                        text_color: C('#FFFFFF')
-                        pos_hint: {"center_x": 0.5}
+        MDBoxLayout:
+            size_hint_y: 2/5
+            orientation: "vertical"
+
+            ScreenManager:
+                id: mainscreenmanager
+
+                Timer:
+                ActionScreen:
 
         MDBoxLayout:
             orientation: "vertical"
@@ -136,7 +133,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 0.3
+                                    width: 1.3
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -188,7 +185,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 0.3
+                                    width: 1.3
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -229,7 +226,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 0.3
+                                    width: 1.3
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -270,7 +267,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 0.3
+                                    width: 1.3
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -321,7 +318,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 0.3
+                                    width: 1.3
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -373,7 +370,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 0.3
+                                    width: 1.3
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
