Action ideas are completed, to make them fully functional.

--- a/codenet.kv
+++ b/codenet.kv
@@ -4,6 +4,7 @@
 #:include dialogs/identitydialog.kv
 #:include dialogs/confirmdialog.kv
 #:include dialogs/rematchdialog.kv
+#:include dialogs/actiondialog.kv
 #:include dialogs/logdialog.kv
 #:include gui/maininformation.kv
 #:include gui/load.kv
