--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -32,14 +32,16 @@
 
             MDLabel:
                 id: whataction
+                halign: "center"
                 text_color: C("FFFFFF")
-                font_style: "Subtitle1"
+                font_style: "H5"
                 theme_text_color: "Custom"
                 adaptive_height: True
                 markup: True
 
             MDLabel:
                 id: actiondesc
+                halign: "center"
                 text_color: C("FFFFFF")
                 font_style: "Subtitle1"
                 theme_text_color: "Custom"
