Have everything I need to finish the actions.

--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -48,15 +48,18 @@
                 adaptive_height: True
                 markup: True
 
+            Widget:
+                size_hint: 1, 0.01
+
             MDBoxLayout:
-                id: addbuttons
+                adaptive_height: True
                 orientation: "horizontal"
+                id: addbuttons
 
             Widget:
                 size_hint: 1, 0.01
 
         Widget:
-            size_hint: 1, 0.01
 
         MDRectangleFlatButton:
             id: okaction
