Analyze Log Complete

--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -44,6 +44,7 @@
         MDBoxLayout:
             adaptive_height: True
             orientation: "horizontal"
+            spacing: "8dp"
             id: addbuttons
 
         Widget:
