--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -56,6 +56,7 @@
             text_color: C("FFFFFF")
             font_style: "Subtitle1"
             theme_text_color: "Custom"
+            markup: True
 
         Widget:
         Widget:
