--- a/codenet.kv
+++ b/codenet.kv
@@ -210,7 +210,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: "At least one hacker is among the following."
+                                text: "At least one hacker may be among the following."
 
                         MDFloatingLabel:
                             adaptive_height: True
@@ -251,7 +251,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: "At least one hacker is among the following."
+                                text: "At least one hacker may be among the following."
 
                         MDFloatingLabel:
                             adaptive_height: True
@@ -292,7 +292,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: "At least one hacker is among the following."
+                                text: "At least one hacker may be among the following."
 
                 Tab:
                     title: f"[size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size][size=15sp][font=Button] ROUND 3[/font][/size]"
