--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -68,7 +68,7 @@
             pos_hint: {"center_x": 0.5, "center_y": 0.5}
             line_color: C("FFFFFF")
             text_color: C("FFFFFF")
-            text: "End Action"
+            text: "End Turn"
             disabled: True
             on_release:
                 app.root.get_screen('main').ids.mainscreenmanager.get_screen('actionscreen').actiontracker()
