--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -86,6 +86,6 @@
             pos_hint: {"center_x": 0.5, "center_y": 0.5}
             line_color: C("FFFFFF")
             text_color: C("FFFFFF")
-            text: "OK"
+            text: "End Turn"
             on_release:
                 root.dismiss()
