Loads of changes and improvements to code.

--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -60,7 +60,7 @@
                 spacing: "8dp"
 
                 MDFillRoundFlatIconButton:
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but1
                     font_style: "Button"
                     md_bg_color: C(app.globals.colordefs["Red"])
@@ -70,7 +70,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Pink"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but2
                     font_style: "Button"
                     text: "Pink"
@@ -79,7 +79,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Purple"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but3
                     font_style: "Button"
                     text: "Purple"
@@ -88,7 +88,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Blue"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but4
                     font_style: "Button"
                     text: "Blue"
@@ -97,7 +97,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Green"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but5
                     font_style: "Button"
                     text: "Green"
@@ -106,7 +106,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Yellow"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but6
                     font_style: "Button"
                     text: "Yellow"
@@ -115,7 +115,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Orange"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but7
                     font_style: "Button"
                     text: "Orange"
@@ -124,7 +124,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Brown"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but8
                     font_style: "Button"
                     text: "Brown"
@@ -133,7 +133,7 @@
 
                 MDFillRoundFlatIconButton:
                     md_bg_color: C(app.globals.colordefs["Grey"])
-                    icon: "circle-outline"
+                    icon: "circle"
                     id: but9
                     font_style: "Button"
                     text: "Grey"
