--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -3,8 +3,9 @@
     size_hint: 0.9, 0.5
 
     MDCard:
+        id: identity
         orientation: "vertical"
-        spacing: "8dp"
+        spacing: "12dp"
         padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
         border_radius: "20dp"
@@ -22,14 +23,11 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        MDBoxLayout:
-            size_hint: 1, 0.01
-
-        MDBoxLayout:
-            id: identity
-            spacing: "8dp"
-            orientation: "vertical"
-            padding: "8dp"
+#        MDBoxLayout:
+#            id: identity
+#            spacing: "8dp"
+#            orientation: "vertical"
+#            padding: "8dp"
 #            canvas.before:
 #                Color:
 #                    rgba: C('#296f2c')
@@ -42,43 +40,39 @@
 #                    pos: self.pos
 #                    size: self.size
 
-            MDLabel:
-                id: whatcolor
-                text_color: C("FFFFFF")
-                font_style: "Subtitle1"
-                theme_text_color: "Custom"
-                adaptive_height: True
-                markup: True
+        MDLabel:
+            id: whatcolor
+            text_color: C("FFFFFF")
+            font_style: "Subtitle1"
+            theme_text_color: "Custom"
+            adaptive_height: True
+            markup: True
 
-            MDLabel:
-                id: arehacker
-                text_color: C("FFFFFF")
-                font_style: "Subtitle1"
-                theme_text_color: "Custom"
-                adaptive_height: True
-                markup: True
+        MDLabel:
+            id: arehacker
+            text_color: C("FFFFFF")
+            font_style: "Subtitle1"
+            theme_text_color: "Custom"
+            adaptive_height: True
+            markup: True
 
-            MDLabel:
-                id: haveallies
-                text_color: C("FFFFFF")
-                font_style: "Subtitle1"
-                theme_text_color: "Custom"
-                adaptive_height: True
-                markup: True
+        MDLabel:
+            id: haveallies
+            text_color: C("FFFFFF")
+            font_style: "Subtitle1"
+            theme_text_color: "Custom"
+            adaptive_height: True
+            markup: True
 
-            MDLabel:
-                id: identitydes
-                font_style: "Subtitle1"
-                theme_text_color: "Custom"
-                text_color: C("FFFFFF")
-                adaptive_height: True
-                markup: True
+        MDLabel:
+            id: identitydes
+            font_style: "Subtitle1"
+            theme_text_color: "Custom"
+            text_color: C("FFFFFF")
+            adaptive_height: True
+            markup: True
 
-            MDBoxLayout:
-                size_hint: 1, 0.01
-
-        MDBoxLayout:
-            size_hint: 1, 0.01
+        Widget:
 
         MDRectangleFlatButton:
             font_style: "Button"
