--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -3,7 +3,6 @@
     size_hint: 0.9, 0.5
 
     MDCard:
-        id: identity
         orientation: "vertical"
         spacing: "12dp"
         padding: "8dp"
@@ -23,54 +22,56 @@
         MDSeparator:
             color: C("FFFFFF")
 
-#        MDBoxLayout:
-#            id: identity
-#            spacing: "8dp"
-#            orientation: "vertical"
-#            padding: "8dp"
-#            canvas.before:
-#                Color:
-#                    rgba: C('#296f2c')
-#                Line:
-#                    width: 2.5
-#                    rectangle: self.x, self.y, self.width, self.height
-#                Color:
-#                    rgba: C('#236027')
-#                Rectangle:
-#                    pos: self.pos
-#                    size: self.size
+        MDStackLayout:
+            id: identity
+            padding: "8dp"
+            spacing: "12dp"
+            canvas.before:
+                Color:
+                    rgba: 0/255, 0/255, 0/255, 0.8
+                Line:
+                    width: 0.3
+                    rectangle: self.x, self.y, self.width, self.height
+                Color:
+                    rgba: 0/255, 0/255, 0/255, 0.4
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
 
-        MDLabel:
-            id: whatcolor
-            text_color: C("FFFFFF")
-            font_style: "Subtitle1"
-            theme_text_color: "Custom"
-            adaptive_height: True
-            markup: True
+            MDLabel:
+                id: whatcolor
+                text_color: C("FFFFFF")
+                font_style: "Subtitle1"
+                theme_text_color: "Custom"
+                adaptive_height: True
+                markup: True
 
-        MDLabel:
-            id: arehacker
-            text_color: C("FFFFFF")
-            font_style: "Subtitle1"
-            theme_text_color: "Custom"
-            adaptive_height: True
-            markup: True
+            MDLabel:
+                id: arehacker
+                text_color: C("FFFFFF")
+                font_style: "Subtitle1"
+                theme_text_color: "Custom"
+                adaptive_height: True
+                markup: True
 
-        MDLabel:
-            id: haveallies
-            text_color: C("FFFFFF")
-            font_style: "Subtitle1"
-            theme_text_color: "Custom"
-            adaptive_height: True
-            markup: True
+            MDLabel:
+                id: haveallies
+                text_color: C("FFFFFF")
+                font_style: "Subtitle1"
+                theme_text_color: "Custom"
+                adaptive_height: True
+                markup: True
 
-        MDLabel:
-            id: identitydes
-            font_style: "Subtitle1"
-            theme_text_color: "Custom"
-            text_color: C("FFFFFF")
-            adaptive_height: True
-            markup: True
+            MDLabel:
+                id: identitydes
+                font_style: "Subtitle1"
+                theme_text_color: "Custom"
+                text_color: C("FFFFFF")
+                adaptive_height: True
+                markup: True
+
+        Widget:
+            size_hint: 1, 0.5
 
         Widget:
 
