Green button for color select will no longer be dark. Made probability of log failing from 20% to 15%.

--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -96,7 +96,7 @@
                         root.ColorSelect(but4)
 
                 MDFillRoundFlatIconButton:
-                    md_bg_color: C(app.globals.colordefs["Green"])
+                    md_bg_color: C('#2e7d32')
                     icon: "circle"
                     id: but5
                     font_style: "Button"
